--- a/www/puzzles/base64/index.html
+++ b/www/puzzles/base64/index.html
@@ -23,7 +23,7 @@
 <div id="message">
     Nice job!<br>
     But be aware: you should never, ever, EVER commit plaintext passwords to your codebase.<br>
-    For storing paintext passwords, encryption keys or anything of a sensitive nature the penality is FINE, IMPRISONMENT, or BOTH!<br>
+    For storing plaintext passwords, encryption keys or anything of a sensitive nature the penalty is FINE, IMPRISONMENT, or BOTH!<br>
 </div>
 <hr>
 <div id="main">
