Add content for note 4.txt, Wrap file list

--- a/www/puzzles/documents/index.html
+++ b/www/puzzles/documents/index.html
@@ -18,8 +18,8 @@
 <div id="main">
     <h2>My Documents</h2>
     <div>
-        <a href="/getDocument?id=1" target="_blank">Work.txt</a>
-        <a href="/getDocument?id=4" target="_blank">Notes.txt</a>
+        <a href="/getDocument?id=1" target="_blank">Work.txt</a><br />
+        <a href="/getDocument?id=4" target="_blank">Notes.txt</a><br />
         <a href="/getDocument?id=7" target="_blank">Programming.txt</a>
     </div>
     <div style="font-size: 12px; margin-top: 20px">
