Add some fireworks

--- a/www/puzzles/finale/index.html
+++ b/www/puzzles/finale/index.html
@@ -7,17 +7,20 @@
 	$(document).ready(registerPasswordSubmit);
     </script>
     <link rel="stylesheet" href="/assets/styles.css">
+    <link rel="stylesheet" href="./pyro.css">
 </head>
 
 <body>
+    <div class="pyro">
+        <div class="before"></div>
+        <div id="message">
+            Congrats, the password to your archive is:
+        </div>
 
-<div id="message">
-    Congrats, the password to your archive is:
-</div>
-
-<div id="main">
-    "HappilyMarried"
-</div>
-
+        <div id="main">
+            "HappilyMarried"
+        </div>
+        <div class="after"></div>
+    </div>
 </body>
 </html>
